--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3"
+actix-files = "0.3"
+actix = "0.10"
+actix-web-actors = "3"
+env_logger = "0.8"
+serde = "1"
+serde_json = "1"
