--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 rts-core = { path = "../rts-core" }
 futures = "0.3"
 tokio = { version = "1.16.1", features = ["full"] } # @TODO remove
+actix-web = "3"
+actix-files = "0.3"
+actix = "0.10"
+actix-web-actors = "3"
+env_logger = "0.8"
+serde = "1"
+serde_json = "1"
