--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -13,3 +13,5 @@ actix-web-actors = "3"
 env_logger = "0.8"
 serde = "1"
 serde_json = "1"
+diesel = { version = "1.4.4", features = ["postgres"] }
+dotenv = "0.15.0"
