--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -16,5 +16,6 @@ actix-web-actors = "3"
 env_logger = "0.8"
 serde = "1"
 serde_json = "1"
-diesel = { version = "1.4.4", features = ["postgres"] }
+diesel = { version = "1.4.4", features = ["postgres", "r2d2",] }
 dotenv = "0.15.0"
+r2d2 = "0.8.9"
