Implement user registration and logout

--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1"
 diesel = { version = "1.4.4", features = ["postgres", "r2d2",] }
 dotenv = "0.15.0"
 r2d2 = "0.8.9"
+time = "0.2"
