--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -17,3 +17,7 @@ diesel = { version = "1.4.4", features = ["postgres", "r2d2",] }
 dotenv = "0.15.0"
 r2d2 = "0.8.9"
 time = "0.2"
+
+# Password hashing and encryption
+rust-argon2 = "1.0"
+rand = { version = "0.8.4", features = ["getrandom", ]}
