--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       DATABASE_URL: postgres://postgres:password@postgresql/postgres
       # TODO ignored at the moment
       LISTEN_URL: 0.0.0.0:8080
+      RUST_LOG: trace,actix_server=trace,actix_web=trace
     depends_on:
-      - postgresql
+      postgresql:
+        condition: service_healthy
     ports:
       - 8080:8080
 
@@ -16,3 +18,8 @@ services:
     image: "postgres:14"
     environment:
       POSTGRES_PASSWORD: password
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "postgres" ]
+      timeout: 45s
+      interval: 10s
+      retries: 10
