--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -8,26 +8,25 @@ edition = "2021"
 [dependencies]
 rts-core = { path = "../rts-core" }
 futures = "0.3"
-tokio = { version = "1.16.1", features = ["full"] } # @TODO remove
-actix-web = "3"
-actix-files = "0.3"
-actix = "0.10"
-actix-web-actors = "3"
-env_logger = "0.8"
-serde = "1"
-serde_json = "1"
-diesel = { version = "1.4.4", features = ["postgres", "r2d2",] }
-dotenv = "0.15.0"
-r2d2 = "0.8.9"
-time = "0.2"
+tokio = { version = "1.17", features = ["full"] } # @TODO remove
+actix-web = "3.3"
+actix-files = "0.5"
+actix = "0.12"
+actix-web-actors = "3.0"
+env_logger = "0.9"
+serde = "1.0"
+serde_json = "1.0"
+diesel = { version = "1.4", features = ["postgres", "r2d2",] }
+dotenv = "0.15"
+r2d2 = "0.8"
+time = "0.2" # v3 breaks compatibility with current actix version
 
 # Password hashing and encryption
 rust-argon2 = "1.0"
-rand = { version = "0.8.4", features = ["getrandom", ]}
+rand = { version = "0.8", features = ["getrandom", ]}
 
 # Token conversion
-base64 = "0.9.3"
+base64 = "0.13"
 
 # AI fetching
-reqwest = "0.10"
-#tokio = { version = "0.2", features = ["full"] }
+reqwest = "0.11"
