--- a/rts-server/Cargo.toml
+++ b/rts-server/Cargo.toml
@@ -7,19 +7,16 @@ edition = "2021"
 
 [dependencies]
 rts-core = { path = "../rts-core" }
-futures = "0.3"
 tokio = { version = "1.17", features = ["full"] } # @TODO remove
-actix-web = "3.3"
-actix-files = "0.5"
-actix = "0.12"
-actix-web-actors = "3.0"
+actix-web = { version = "4.0", features = ["cookies"] }
+cookie = "0.16"
+actix-files = "0.6"
 env_logger = "0.9"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 diesel = { version = "1.4", features = ["postgres", "r2d2",] }
 dotenv = "0.15"
 r2d2 = "0.8"
-time = "0.2" # v3 breaks compatibility with current actix version
 
 # Password hashing and encryption
 rust-argon2 = "1.0"
