--- a/rts-front/Cargo.toml
+++ b/rts-front/Cargo.toml
@@ -11,3 +11,11 @@ yew-router = "0.16"
 reqwasm = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen-futures = "0.4"
+web-sys = "0.3"
+
+# Web console logging
+weblog = "0.3"
+wasm-bindgen = "0.2"
+
+# Window alerts
+gloo-utils = "0.1"
