--- a/rts-front/Cargo.toml
+++ b/rts-front/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2021"
 [dependencies]
 yew = "0.19"
 yew-router = "0.16"
-reqwasm = "0.2"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3"
+
+# Web requests and websockets
+reqwasm = "0.2"
 
 # Web console logging
 weblog = "0.3"
