--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     build: "."
     environment:
       DATABASE_URL: postgres://postgres:password@postgresql/postgres
-      # TODO ignored at the moment
       LISTEN_URL: 0.0.0.0:8080
-      # RUST_LOG: trace,actix_server=trace,actix_web=trace
+      RUST_LOG: debug,actix_server=debug,actix_web=debug
+      #RUST_LOG: info
     depends_on:
       postgresql:
         condition: service_healthy
