--- a/rts-front/Cargo.toml
+++ b/rts-front/Cargo.toml
@@ -6,3 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+yew = "0.19"
+yew-router = "0.16"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+wasm-bindgen-futures = "0.4"
+web-sys = "0.3"
+
+# Web requests and websockets
+reqwasm = "0.2"
+
+# Web console logging
+weblog = "0.3"
+wasm-bindgen = "0.2"
+
+# Window alerts
+gloo-utils = "0.1"
