--- a/rts-front/Cargo.toml
+++ b/rts-front/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "1.0"
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3"
 
+regex = "1.5.5"
+
 # Web requests and websockets
 reqwasm = "0.2"
 
